--- a/_posts/2021-05-13-Markdown基本语法.md
+++ b/_posts/2021-05-13-Markdown基本语法.md
@@ -10,8 +10,9 @@ tags:                               #标签
     - 技术
     - Markdown
 ---
-## Markdown标题
-Markdown标题有两种格式
+## 一、Markdown标题
+Markdown标题有两种格式  
+
 1.=和-标记语法
 
 ```
@@ -50,8 +51,9 @@ Markdown标题有两种格式
 ###### 六级标题
 
 ***   
-## Markdown段落格式
-Markdown段落没有特殊的格式
+## 二、Markdown段落格式
+Markdown段落没有特殊的格式  
+
 1.段落的换行是使用两个以上空格加上回车  
 
 ```
@@ -75,12 +77,12 @@ ___粗斜体文本___
 
 效果展示：
 
-*斜体文本*
-_斜体文本_
-**粗体文本**
-__粗体文本__
-***粗斜体文本***
-___粗斜体文本___
+*斜体文本*  
+_斜体文本_  
+**粗体文本**  
+__粗体文本__  
+***粗斜体文本***  
+___粗斜体文本___  
 
 
 3.分割线  
@@ -123,7 +125,7 @@ ___粗斜体文本___
 
 ~~Summer Rain~~  
 
-5. 下划线   
+5.下划线   
 
 通过 HTML 的 \<u> 标签来实现   
 
@@ -134,7 +136,7 @@ ___粗斜体文本___
 
 <u>Sumemr</u>
 
-6. 脚注  
+6.脚注  
 
 ```
 Summer[^Rain]
