--- a/_posts/2021-05-13-Markdown基本语法(2).md
+++ b/_posts/2021-05-13-Markdown基本语法(2).md
@@ -113,4 +113,40 @@ print("hello world")
 ```python
 print("hello world")
 
+```  
+
+## 六、Markdown链接  
+
+1. 链接使用方法如下：  
+
 ```
+[Summer的博客](https://mrsummer123.github.io/)   
+
+或者   
+
+<https://mrsummer123.github.io/>   
+```
+[Summer的博客](https://mrsummer123.github.io/)   
+
+或者   
+
+<https://mrsummer123.github.io/>  
+
+2. 高级链接  
+
+我们可以通过变量来设置一个链接，变量赋值在文档末尾进行：
+```
+这个链接用 1 作为网址变量 [Summer][1]  
+
+  [1]: https://mrsummer123.github.io/
+
+```  
+
+这个链接用 1 作为网址变量 [Summer][1]  
+
+
+  [1]: https://mrsummer123.github.io/  
+
+
+
+
